# ArieoEngine-BuildEnv

./: ArieoPackage.yaml  CMakeLists.txt  CMakePresets.json.in  arieo_package.json  build_package.cmake  install_package.cmake
cmake/: build_engine_project.cmake  build_environment.cmake  cmake_wrapper_for_vscode.bat  cmake_wrapper_for_vscode.sh  engine_project.cmake  engine_project_install_config.cmake  engine_project_install_config.cmake.in
cmake/application/: application_project.cmake
cmake/application/content/: application_cook_image.cmake  application_cook_model.cmake  application_cook_shader.cmake
cmake/application/manifest/: application_copy_manifest.cmake
cmake/application/script/: application_script_cxx.cmake  application_script_dotnet.cmake  application_script_rust.cmake
cmake/codegen/: generate_cxx_ast.py  interface_codegen.cmake  xxx.interface_info.h.mustache
cmake/engine_projects/: engine_base_project.cmake  engine_bootstrap_project.cmake  engine_headonly_library_project.cmake  engine_interface_linker_project.cmake  engine_interface_project.cmake  engine_module_project.cmake  engine_plugin_project.cmake  engine_shared_library_project.cmake  engine_static_library_project.cmake  engine_test_project.cmake  engine_tool_project.cmake
cmake/package/: arieo_package.cmake  build_engine_project_package.cmake  install_engine_project_package.cmake  search_arieo_packages.cmake  search_engine_project_packages.cmake
cmake/presets/: all.unified.json  android.armv8.json  application.unified.json  base.json  macos.arm64.json  raspberry.armv8.json  ubuntu.x86_64.json  windows-dev.x86_64.json  windows.x86_64.json
cmake/projects/: engine_base_project.cmake  engine_bootstrap_project.cmake  engine_interface_linker_project.cmake  engine_interface_project.cmake  engine_module_project.cmake  engine_plugin_project.cmake  engine_shared_library_project.cmake  engine_static_library_project.cmake  engine_test_project.cmake  engine_tool_project.cmake  project_basic_paramters.cmake  project_dependencies_parameters.cmake  project_install_paramters.cmake  project_interface_code_gen_parameters.cmake  project_sources_parameters.cmake
cmake/projects/application/: application_project.cmake
cmake/projects/application/content/: application_cook_model.cmake
cmake/projects/application/manifest/: application_copy_manifest.cmake
cmake/projects/application/script/: application_script_cxx.cmake  application_script_dotnet.cmake  application_script_rust.cmake  wasm_cxx_project.cmake
cmake/projects/engine/: engine_project.cmake  engine_project_basic_paramters.cmake  engine_project_dependencies_parameters.cmake  engine_project_install_paramters.cmake  engine_project_interface_code_gen_parameters.cmake  engine_project_interface_parameters.cmake  engine_project_outputs_paramters.cmake
cmake/projects/engine/templates/: project_install_config.cmake.in
conan/profiles/host/: conan_host_profile.android.armv8.txt  conan_host_profile.windows.x86_64.txt
